--- a/lowfator-frontend/src/components/IntroVideo.css
+++ b/lowfator-frontend/src/components/IntroVideo.css
@@ -1,16 +1,21 @@
+.intro-video-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: white; /* evita parpadeo negro */
+  z-index: 9999;
+}
+
 .intro-video {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    z-index: 9999;
-  }
-  
-  .video-fullscreen {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  transition: opacity 1s ease-in-out;
+}
+
+.intro-video.fade-out {
+  opacity: 0;
+}
